# olcmr

./: .gitignore  .gitmodules  README.md
results/: README.md
results/cpu_usage/: cpu_eval.py  cpu_eval_newer_college.txt
results/trajectories/: traj_plot_newer_college.py  traj_plot_no_gt.py
results/trajectories/nc-quad-easy/: Histogram.csv  histogram.py  modified_path.csv  nc-quad-easy.csv  path.csv
results/trajectories/nc-short-experiment/: modified_path.csv  nc-short-experiment.csv  path.csv
results/trajectories/scout/: modified_path.csv  path.csv
results/trajectories/summit/: modified_path.csv  path.csv
src/cs_tools/: CMakeLists.txt  README.md  package.xml  setup.py
src/cs_tools/cs_tools/: __init__.py
src/cs_tools/include/cs_tools/: common.hpp  geo_proj.hpp  quaternion.hpp
src/cs_tools/scripts/: geo_proj_test.py  quaternion_test.py
src/cs_tools/src/: geo_proj.cpp  python_binding.cpp  quaternion.cpp
src/cs_tools/test/: geo_proj_test.cpp
src/olcmr_pkg/: CMakeLists.txt  package.xml
src/olcmr_pkg/launch/: olcmr.launch.py  olcmr_newer_college.launch.py
src/olcmr_pkg/params/: README.md
src/olcmr_pkg/params/bag_qos/: bag_param.yaml
src/olcmr_pkg/params/calibration/: camchain_newer.yaml
src/olcmr_pkg/params/ekf/: ekf_imu_lidarslam_newer.yaml  ekf_odom_imu_lidarslam.yaml
src/olcmr_pkg/params/lidarslam/: lidarslam_params.yaml  lidarslam_params_newer_2021.yaml
src/olcmr_pkg/params/robot_configs/: newer_college_2021.yaml  template.yaml
src/olcmr_pkg/params/rviz/: olcmr_config.rviz
src/olcmr_pkg/scripts/: data_saver.py  images_undistortion.py  lidar_cameras_projection.py  trajectory_replay.py
src/olcmr_pkg/src/: covariance_relay.cpp  map_saver.cpp  pc_downsampler.cpp
voxblox_files/launch/: agilex_tsdf_colored.launch  newer_college_tsdf_colored.launch
voxblox_files/rviz/: voxblox_olcmr.rviz
